--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile '.\requirements.in'
 #
+altgraph==0.17.4
+    # via pyinstaller
 arrow==1.3.0
     # via slash
 asttokens==3.0.0
@@ -74,11 +76,16 @@ openpyxl==3.1.5
 ordered-set==4.1.0
     # via slash
 packaging==25.0
-    # via build
+    # via
+    #   build
+    #   pyinstaller
+    #   pyinstaller-hooks-contrib
 pandas==2.2.3
     # via -r .\requirements.in
 parso==0.8.4
     # via jedi
+pefile==2023.2.7
+    # via pyinstaller
 pip-tools==7.4.1
     # via -r .\requirements.in
 prompt-toolkit==3.0.51
@@ -93,6 +100,10 @@ pygments==2.19.1
     # via
     #   ipython
     #   ipython-pygments-lexers
+pyinstaller==6.13.0
+    # via -r .\requirements.in
+pyinstaller-hooks-contrib==2025.4
+    # via pyinstaller
 pyparsing==3.2.3
     # via slash
 pyproject-hooks==1.2.0
@@ -105,6 +116,8 @@ python-dateutil==2.9.0.post0
     #   pandas
 pytz==2025.2
     # via pandas
+pywin32-ctypes==0.2.3
+    # via pyinstaller
 raven==6.10.0
     # via slash
 requests==2.32.3
